; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/pfctl/extr_pfctl_radix.c_pfr_get_tables.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/pfctl/extr_pfctl_radix.c_pfr_get_tables.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pfr_table = type { i32 }
%struct.pfioc_table = type { i32, i32, i32, %struct.pfr_table*, %struct.pfr_table }

@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@dev = common dso_local global i32 0, align 4
@DIOCRGETTABLES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pfr_get_tables(%struct.pfr_table* %0, %struct.pfr_table* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.pfr_table*, align 8
  %7 = alloca %struct.pfr_table*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.pfioc_table, align 8
  store %struct.pfr_table* %0, %struct.pfr_table** %6, align 8
  store %struct.pfr_table* %1, %struct.pfr_table** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32*, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %24, label %13

13:                                               ; preds = %4
  %14 = load i32*, i32** %8, align 8
  %15 = load i32, i32* %14, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %24, label %17

17:                                               ; preds = %13
  %18 = load i32*, i32** %8, align 8
  %19 = load i32, i32* %18, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %17
  %22 = load %struct.pfr_table*, %struct.pfr_table** %7, align 8
  %23 = icmp eq %struct.pfr_table* %22, null
  br i1 %23, label %24, label %26

24:                                               ; preds = %21, %13, %4
  %25 = load i32, i32* @EINVAL, align 4
  store i32 %25, i32* @errno, align 4
  store i32 -1, i32* %5, align 4
  br label %53

26:                                               ; preds = %21, %17
  %27 = call i32 @bzero(%struct.pfioc_table* %10, i32 32)
  %28 = load i32, i32* %9, align 4
  %29 = getelementptr inbounds %struct.pfioc_table, %struct.pfioc_table* %10, i32 0, i32 0
  store i32 %28, i32* %29, align 8
  %30 = load %struct.pfr_table*, %struct.pfr_table** %6, align 8
  %31 = icmp ne %struct.pfr_table* %30, null
  br i1 %31, label %32, label %37

32:                                               ; preds = %26
  %33 = getelementptr inbounds %struct.pfioc_table, %struct.pfioc_table* %10, i32 0, i32 4
  %34 = load %struct.pfr_table*, %struct.pfr_table** %6, align 8
  %35 = bitcast %struct.pfr_table* %33 to i8*
  %36 = bitcast %struct.pfr_table* %34 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %35, i8* align 4 %36, i64 4, i1 false)
  br label %37

37:                                               ; preds = %32, %26
  %38 = load %struct.pfr_table*, %struct.pfr_table** %7, align 8
  %39 = getelementptr inbounds %struct.pfioc_table, %struct.pfioc_table* %10, i32 0, i32 3
  store %struct.pfr_table* %38, %struct.pfr_table** %39, align 8
  %40 = getelementptr inbounds %struct.pfioc_table, %struct.pfioc_table* %10, i32 0, i32 1
  store i32 4, i32* %40, align 4
  %41 = load i32*, i32** %8, align 8
  %42 = load i32, i32* %41, align 4
  %43 = getelementptr inbounds %struct.pfioc_table, %struct.pfioc_table* %10, i32 0, i32 2
  store i32 %42, i32* %43, align 8
  %44 = load i32, i32* @dev, align 4
  %45 = load i32, i32* @DIOCRGETTABLES, align 4
  %46 = call i64 @ioctl(i32 %44, i32 %45, %struct.pfioc_table* %10)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %49

48:                                               ; preds = %37
  store i32 -1, i32* %5, align 4
  br label %53

49:                                               ; preds = %37
  %50 = getelementptr inbounds %struct.pfioc_table, %struct.pfioc_table* %10, i32 0, i32 2
  %51 = load i32, i32* %50, align 8
  %52 = load i32*, i32** %8, align 8
  store i32 %51, i32* %52, align 4
  store i32 0, i32* %5, align 4
  br label %53

53:                                               ; preds = %49, %48, %24
  %54 = load i32, i32* %5, align 4
  ret i32 %54
}

declare dso_local i32 @bzero(%struct.pfioc_table*, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @ioctl(i32, i32, %struct.pfioc_table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
